refactor: Boolean 원시 타입을 boolean으로 변환 및 is 네이밍 제거